[package]
name = "procinfo"
version = "0.3.1"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/danburkert/procinfo-rs"
documentation = "https://docs.rs/procinfo"
description = "A library for accessing Linux process and system information"
keywords = ["proc", "process", "system", "Linux"]
exclude = [
  ".gitignore",
  ".travis.yml",
]
build = "build.rs"

[dependencies]
libc = "0.2"
nom = "1"
byteorder = "0.5"

[build-dependencies]
rustc_version = "0.1.7"
